<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="processId">managerProcess</string>
    <string name="app_name">MAL for Android</string>
    
    <string name="pullAnime">Pulling anime list from MAL</string>
    <string name="pullManga">Pulling Manga list from MAL</string>
    
    <string name="menuSort">Sort</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSync">Sync Now</string>
    <string name="menuSwitch">Switch Lists</string>
    
    <string name="firstSync">"Loading your Anime list now.
Please be patient this first loading can be slow."</string>

	<string name="accountSetup">"Please setup your account"</string>
    <string name="apiSetup">"Please setup MAL API"</string>
    
    <string name="detailScorePrefix">Score: </string>
    <string name="detailMemberScorePrefix">Member Score: </string>
    <string name="detailRankPrefix">Rank: </string>
    <string name="imagePathAnime">Android/data/com.riotopsys.MALForAndroid/anime/</string>
    <string name="imagePathManga">Android/data/com.riotopsys.MALForAndroid/manga/</string>
    <string name="deleting">Deleting Item...</string>
    
    <string name="prefAcctTitle">Account Settings</string>
    
    <string name="prefUserSummary">MAL User Name</string>
    <string name="prefUserTitle">Username</string>
    
    <string name="prefPassSummary">MAL Password</string>
    <string name="prefPassTitle">Password</string>
    
    <string name="prefAPISummary">Site of Unofficial MAL API Provider</string>
    <string name="prefAPITitle">MAL API Site</string>
    <string name="prefAPIDefault">mal-api.com</string>
    
    <string name="prefPresent">Presentation Options</string>
    
    <string name="prefModeSummary">Default starting list for MFA</string>
    <string name="prefModeTitle">Default list</string>
    <string name="prefModeDefault">Anime</string>
    
    <string name="prefViewTitle">Default View</string>
    <string name="prefViewDefault">1</string>
    
    <string name="prefSortTitle">Default Sorting</string>
    
    <string name="prefUpdateCat">List Update Options</string>
    
    <string name="prefUpdateTitle">Update Frequency</string>
    <string name="prefUpdateDefault">14400000</string>
    
    <string name="menuDetailReloadSyn">Reload</string>
    <string name="menuDetailDelete">Delete from list</string>
    
    <string name="menuItemLastWatched">Set Last Watched</string>
    <string name="menuItemStatus">Change Status</string>
    <string name="menuItemScore">Set Score</string>
    
    <string name="menuItemLastRead">Set Last Chapter</string>	
	<string name="menuItemLastVolume">Set Last Volume</string>
    
    <string name="Watching">Watching</string>
    <string name="Reading">Reading</string>
    <string name="Completed">Completed</string>
    <string name="OnHold">On Hold</string>
    <string name="Dropped">Dropped</string>
    <string name="PlantoWatch">Plan to Watch</string>
    <string name="PlantoRead">Plan to Read</string>
    
    <string name="itemLayoutComp">Completed:</string>
    <string name="itemLayoutCompVolume">Volumes:</string>
    <string name="itemLayoutCompChap">Chapters:</string>
    <string name="itemLayoutDivider">/</string>
    
    
    <string name="intPickerInc">+</string>
    <string name="intPickerDec">-</string>
    <string name="intPickerButton">Ok</string>
    
    <string name="connectError">Unable to connect to API provider</string>
    
    <string name="anime_table_def">
CREATE TABLE if not exists `animeList` (
  `id` INTEGER UNSIGNED NOT NULL,
  `title` CHAR(40) NOT NULL,
  `type` CHAR(40) NOT NULL,
  `imageUrl` CHAR(40) NOT NULL,
  `episodes` INTEGER UNSIGNED NOT NULL,
  `status` CHAR(40) NOT NULL,
  `watchedEpisodes` INTEGER UNSIGNED NOT NULL,
  `score` INTEGER UNSIGNED NOT NULL,
  `watchedStatus` CHAR(40) NOT NULL,
  `dirty` INTEGER UNSIGNED NOT NULL DEFAULT 0,
  `memberScore` CHAR(40) DEFAULT NULL,
  `rank` CHAR(40) DEFAULT NULL,
  `synopsis` BLOB DEFAULT NULL,
  PRIMARY KEY (`id`)
)
    </string>
    
        <string name="manga_table_def">
CREATE TABLE if not exists `mangaList` (
  `id` INTEGER UNSIGNED NOT NULL,
  `title` CHAR(40) NOT NULL,
  `type` CHAR(40) NOT NULL,
  `imageUrl` CHAR(40) NOT NULL,
  `chapters` INTEGER UNSIGNED NOT NULL,
  `volumes` INTEGER UNSIGNED NOT NULL,
  `status` CHAR(40) NOT NULL,
  `chaptersRead` INTEGER UNSIGNED NOT NULL,
  `volumesRead` INTEGER UNSIGNED NOT NULL,
  `score` INTEGER UNSIGNED NOT NULL,
  `watchedStatus` CHAR(40) NOT NULL,
  `dirty` INTEGER UNSIGNED NOT NULL DEFAULT 0,
  `memberScore` CHAR(40) DEFAULT NULL,
  `rank` CHAR(40) DEFAULT NULL,
  `synopsis` BLOB DEFAULT NULL,
  PRIMARY KEY (`id`)
)
    </string>
    
    <string name="related_table_def">
CREATE TABLE `related` (
  `parentId` INTEGER unsigned NOT NULL,
  `parentType` INTEGER unsigned NOT NULL,
  `category` char(10) NOT NULL,
  `id` INTEGER unsigned NOT NULL,
  `title` char(40) NOT NULL,
  PRIMARY KEY (`parentId`,`parentType`, `category`, `id`)
)
    </string>
    
	<string name="cursorSelect">
    	select id as `_id`, title, watchedEpisodes, episodes, score from `animeList`
    </string>
    
    <string name="cursorSelectManga">
    	select id as `_id`, title, chaptersRead as watchedEpisodes, chapters as episodes, score, volumesRead, volumes from `mangaList`
    </string>
    
    <string name="dirty">
    	update animeList set dirty = 1 where dirty = 0;
    </string>
    
    <string name="clean">
    	delete from animeList where not dirty = 0;
    </string>
    
    <string name="filter">Filter settings</string>
    
    <string-array name="modeArray">
        <item>Anime</item>
        <item>Manga</item>
    </string-array>
    
    <string-array name="filterArray">
        <item>All Anime</item>
        <item>Watching</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
        <item>Plan to Watch</item>        
    </string-array>
    
    <string-array name="filterPerfs">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>        
    </string-array>
    
    <string-array name="filterArrayManga">
    	<item>All Manga</item>
        <item>Reading</item>
        <item>Completed</item>
        <item>On Hold</item>
        <item>Dropped</item>
        <item>Plan to read</item>
    </string-array>
    
    <!--string-array name="filterPerfsManga">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array-->
    
    <string-array name="sortArray">
    	<item>Title</item>
		<item>Completed</item>
    	<item>Score</item>
    </string-array>
    
    <string-array name="filterWhere">
        <item>where id is not null</item>
        <item>where watchedStatus = \"watching\"</item>
        <item>where watchedStatus = \"completed\"</item>
        <item>where watchedStatus = \"on-hold\"</item>
        <item>where watchedStatus = \"dropped\"</item>
        <item>where watchedStatus = \"plan to watch\"</item>        
    </string-array>
    
    <string-array name="filterWhereManga">
        <item>where id is not null</item>
        <item>where watchedStatus = \"reading\"</item>
        <item>where watchedStatus = \"completed\"</item>
        <item>where watchedStatus = \"on-hold\"</item>
        <item>where watchedStatus = \"dropped\"</item>
        <item>where watchedStatus = \"plan to read\"</item>        
    </string-array>
    
    <string name="titleSort"> order by title </string>
    <string name="completeSort"> order by watchedEpisodes desc </string>
    <string name="scoreSort"> order by score desc </string>
    
    <string-array name="sortPerfs">    
    	<item> order by title </item>
    	<item> order by watchedEpisodes desc </item>
    	<item> order by score desc </item>
    </string-array>
    
    <string-array name="updateFreqs">    
    	<item>30 Min</item>
    	<item>Hourly</item>
    	<item>4 per Day</item>
    	<item>Daily</item>
    	<item>On Demand</item>
    </string-array>
    
    <string-array name="delays">
        <item>1800000</item>
        <item>3600000</item>
        <item>14400000</item>
        <item>86400000</item>
        <item>-1</item>
    </string-array>
    	
</resources>
