<?xml version="1.0" encoding="utf-8"?>
<menu
xmlns:android="http://schemas.android.com/apk/res/android">

	<item
	android:id="@+id/setWatched"
	android:title="@string/menuItemLastRead"/>
	
	<item
	android:id="@+id/setVolumeRead"
	android:title="@string/menuItemLastVolume"/>
	
	<item
	android:id="@+id/setScore"
	android:title="@string/menuItemScore"/>
	
	
	<item
	android:title="@string/menuItemStatus">
		<menu>
    		<group
    		android:checkableBehavior="none">
        		
        		<item
				android:id="@+id/itemStatusReading"
              	android:title="@string/Reading" />
              	
              	<item
              	android:id="@+id/itemStatusCompleted"
              	android:title="@string/Completed" />
              	
              	<item
              	android:id="@+id/itemStatusOnHold"
              	android:title="@string/OnHold" />
              	
              	<item
              	android:id="@+id/itemStatusDropped"
              	android:title="@string/Dropped" />
              	
              	<item
              	android:id="@+id/itemStatusPlantoRead"
              	android:title="@string/PlantoRead" />
              	
    		</group>
		</menu>
	</item>
	
	<item
	android:id="@+id/menuItemDelete"
	android:title="@string/menuDetailDelete"/>
	
</menu>
