<?xml version="1.0" encoding="utf-8"?>
<menu
xmlns:android="http://schemas.android.com/apk/res/android">

	<item
	android:title="@string/menuDetailReloadSyn"
	android:icon="@android:drawable/ic_menu_rotate"
	android:id="@+id/detailMenuSync" />
	
	<item
	android:id="@+id/setWatched"
	android:title="@string/menuItemLastRead"
	android:icon="@android:drawable/ic_menu_edit"/>
	
	<item
	android:id="@+id/setVolumeRead"
	android:title="@string/menuItemLastVolume"
	android:icon="@android:drawable/ic_menu_edit"/>
	
	<item
	android:id="@+id/setScore"
	android:title="@string/menuItemScore"
	android:icon="@android:drawable/ic_menu_edit"/>
		
	<item
	android:title="@string/menuItemStatus"
	android:icon="@android:drawable/ic_menu_edit">
		<menu>
    		<group
    		android:checkableBehavior="none">
        		
        		<item
				android:id="@+id/itemStatusReading"
              	android:title="@string/Reading" />
              	
              	<item
              	android:id="@+id/itemStatusCompleted"
              	android:title="@string/Completed" />
              	
              	<item
              	android:id="@+id/itemStatusOnHold"
              	android:title="@string/OnHold" />
              	
              	<item
              	android:id="@+id/itemStatusDropped"
              	android:title="@string/Dropped" />
              	
              	<item
              	android:id="@+id/itemStatusPlantoRead"
              	android:title="@string/PlantoRead" />
              	
    		</group>
		</menu>
	</item>
	
	<item
	android:title="@string/menuDetailDelete"
	android:icon="@android:drawable/ic_menu_delete"
	android:id="@+id/detailMenuDelete" />

</menu>
