<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	
	<item
	android:title="@string/menuSort" 
	android:icon="@android:drawable/ic_menu_sort_by_size" 
	android:id="@+id/menuSort">
		<menu>
    		<group android:checkableBehavior="none">
        		<item android:id="@+id/sortTitle"
              	android:title="Title" />
        		<item android:id="@+id/sortComplete"
              	android:title="Completed" />
              	<item android:id="@+id/sortScore"
              	android:title="Score" />
    		</group>
		</menu>
	</item>
	<item
	android:title="Add"
	android:icon="@android:drawable/ic_menu_add"
	android:id="@+id/menuAdd" />
	<item
	android:title="@string/menuSync"
	android:icon="@android:drawable/ic_menu_rotate"
	android:id="@+id/menuSync" />
	
	<item
	android:title="@string/menuSwitch"
	android:icon="@android:drawable/ic_menu_set_as"
	android:id="@+id/menuSwitch" />
	
	<item
	android:title="@string/menuSettings"
	android:icon="@android:drawable/ic_menu_preferences"
	android:id="@+id/menuSettings" />

</menu>
